--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,9 +44,7 @@ jobs:
     - name: Terraform Apply (Deploy ZeroTier controllers and ZTAdmin)
       run: terraform apply -auto-approve \
            -var="client_name=${{ github.event.inputs.client_name }}" \
-           -var="client_domain=${{ github.event.inputs.client_domain }}" \
-           -var="tunnel_port=${{ github.event.inputs.tunnel_port }}" \
-           -var="ssh_port=${{ github.event.inputs.ssh_port }}"
+           -var="client_domain=${{ github.event.inputs.client_domain }}"
       working-directory: ./terraform
 
     # Save SSH private key to GitHub Secrets
